# odus

./: .env.example  .gitignore  EXTENSION_STATUS.md  LICENSE  README.md  dbus_client.py  deploy.sh  presentation_6x6x6.md  pyproject.toml  requirements.txt  ruff_output.txt  run.sh  run_v2_ui.py  vulture_output.txt
assets/mascot/: README.md
docs/: DEV1_SYSTEM.md  DEV2_AI.md  DEV3_UI.md  README.md
gnome-extension/: README.md  dbus_interface.xml  extension.js  metadata.json
gnome-extension/schemas/: gschemas.compiled  org.gnome.shell.extensions.odus-bridge.gschema.xml
gnome-extension/ui/: presentation.js
odus/: __init__.py  dbus_client.py  events.py  main.py  main_v2.py  main_v2_gnome.py
odus/action/: __init__.py  executor.py  file_browser.py  input_sim.py  pty_session.py  safety.py
odus/action/input/: base.py  pyautogui.py  xdotool.py  ydotool.py
odus/perception/: __init__.py  capture.py  hotkey.py
odus/reasoning/: __init__.py  agent.py  plan_executor.py  prompts.py  tools.py  vision.py
odus/ui/: __init__.py  app.py  chat_interface.py  chat_panel.py  components.py  ghost_terminal.py  main_window.py  mascot.py  overlay.py  theme.py
odus/ui/components/: action_step.py  chat_bubble.py  header.py  input_bar.py  permission_card.py  sidebar.py
odus/ui_v2/: app.py  chat_window.py  sidebar_window.py  theme.py
odus/ui_v2/components/: action_step.py  chat_bubble.py  chat_history.py  ghost_terminal.py  header.py  (+2 more)
scripts/: setup_daemon.sh  setup_demo_state.py  setup_tools.sh
tests/: test_capture.py  test_executor.py  test_safety.py  test_vision.py
