[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odus"
version = "0.1.0"
description = "Vision-native AI desktop assistant that mentors Linux beginners"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "flet>=0.25.0",
    "google-genai>=1.0.0",
    "mss>=9.0.0",
    "pynput>=1.7.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.scripts]
odus = "odus.main:main"
